--- a/index.html
+++ b/index.html
@@ -101,8 +101,11 @@ document.onkeydown = function(e) {
 			  //india
 		      } else if (passwordText == "PasswordOfSecrets1" && usrnameText == "india.levell") {
 				  	return true;
+			  //charles
+		      } else if (passwordText == "JOH" && usrnameText == "CharChat") {
+				    return true;
 			  //new
-		      }
+			  }
 			  var i = 0;
               var txt = 'ACCESS DENIED. PLEASE TRY AGAIN. ';
               var speed = 100;
