--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <h1 align="center" style="font-family:sans-serif;">A Tomobug chewed through your cable.</h1>
     <h3 align="center" style="font-family:sans-serif;">It looks like we can't find what you searched for :(</h3>
     <p align="center"><img id="image" width="150px" height="150px" src="https://jomunatech.com/404.png" /></p>
-    <p align="center"><a style="font-family:sans-serif;text-decoration:none;color:#0000b3;font-weight:bold;" href="https://jomunatech.co.uk/">
+    <p align="center"><a style="font-family:sans-serif;text-decoration:none;color:#0000b3;font-weight:bold;" href="https://jat286.github.io/jat/">
       Go to JomunATech</a></p>
   </body>
 </html>
