Finally an update to Madefenders???

--- a/madefenders.html
+++ b/madefenders.html
@@ -163,7 +163,7 @@
 		</style>
 		<script>
 		    function notice() {
-		    	//alert("New Level Data + Easter Egg!");
+		    	alert("New updates will come soon, I think. 010322");
 		    }
 		    function info() {
 		    	window.location.replace("story.html");
@@ -205,6 +205,6 @@
             <source src="assets/Sounds/victory.wav" type="audio/wav">
             Oh No!
         </audio>
-	    <p align="center">Game, logo and all names Copyright &copy; Jomuneziun A Technology 2015 - 2021 | <a href="index.html" style="color: red;">Return to Jat</a> | <a href="madefenders.html" style="color: red;">Reload</a></p>
+	    <p align="center">Game, logo and all names Copyright &copy; Jomuneziun A Technology 2015 - 2022 | <a href="index.html" style="color: red;">Return to Jat</a> | <a href="madefenders.html" style="color: red;">Reload</a></p>
 	</body>
 </html>
