Jat version 161 ie the big one

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ document.onkeydown = function(e) {
 			  var usrname = document.getElementById("usrnameBox");
 			  var usrnameText = usrname.value;
 			  //me
-			  if (passwordText == "1Zw2dtp3wbh@hwgf1$@wn@13@" && usrnameText == "Carrot") {
+			  if (passwordText == "1Zw2dtp3wbh@hwgf1$" && usrnameText == "Carrot") {
 			  	return true;
 			  //edward
 			  } else if (passwordText == "CaRbON=C6" && usrnameText == "ELikesJat") {
@@ -130,10 +130,7 @@ document.onkeydown = function(e) {
 		</script>
 	</head>
 	<body id="body"><br/>
-	    <h1 data-starData="h1-1" id="header">
-    	          <span style="color: #ff0040;">J</span><span style="color: #ff7500;">A</span><span style="color: #ffbf00;">T</span><span style="color: #080;">!</span>
-    	</h1><br/>
-    	<!--<p id="splash">April Fools!</p>-->
+    	<img src="assets/Images/jatlogobig.png" class="indexlargeimageatthetop" style="  display: block;margin-left: auto;margin-right: auto;width: 18%;height:15%;"><br/>
     	<form action>
 		<fieldset class="fieldset"><legend>Log In</legend>
 		<p align="center">Username: <input id="usrnameBox" type="text" /></p>
