--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
         <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
         <!-- sc_xml data-starData attr_bisc -->
-        <title>JomunATech.co.uk | Jat</title>
+        <title>Jat | Jomunatech.com</title>
         <!-- data-starData="/head" -->
     </head>
     <body data-starData="body-" id="body" onload="keepColour(); display_ct(); opn(); ifload();" vlink="#0000b3" link="#0000b3">
@@ -147,12 +147,12 @@
       var theBody = document.getElementById("body");
         function resetColour() {
             bar.style.backgroundImage = "none";
-            bar.style.backgroundColor = "#ccc";
+            bar.style.backgroundColor = "#ddd";
             document.getElementById("header").style.border = "5px solid black";
-            theBody.style.fontFamily = "'Ubuntu'";
+            theBody.style.fontFamily = "'Share'";
             var backgroundColour = "#ccc";
             localStorage.setItem("colourKey", backgroundColour);
-            var fontFamily = "'Ubuntu'";
+            var fontFamily = "'Share'";
             localStorage.setItem("fontKey", fontFamily);
             var thingBorder = "5px solid black";
             localStorage.setItem("borderKey", thingBorder);
@@ -310,42 +310,24 @@
     		function jat () {
 			  window.location.replace("Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html");
 			}
-    	</script><br />
-    	<h1 data-starData="h1-1" id="header" onclick="jat()"><span style="color: #ff0040;">J</span><span style="color: #ff7500;">A</span><span style="color: #ffbf00;">T</span><span style="color: #080;">!</span></h1>
+    	</script>
+	<div class="hero-image">
+
+	</div>
+	<br/>
     	<noscript>Oh dear turn JavaScript on or this won't work.</noscript>
         	<div>
-        		    	<p align="center">Hi <span id="name"> </span>! The time is <span id="ct"> </span></p>
     		<div class="main-carousel">
                 <div class="carousel-cell" id="carousel-cell-1">...</div>
                 <div class="carousel-cell" id="carousel-cell-2">...</div>
                 <div class="carousel-cell" id="carousel-cell-3">...</div>
            </div>
            <h1 class="thingymabob" style="color: #0000b3;">Not Sure What It Does</h1>
-           <h1 class="thingymabob" style="color: red;">Used by about Five People</h1>
+           <h1 class="thingymabob" style="color: red;">Used by about 35 People</h1>
            <h1 class="thingymabob" style="color: #53b85c;">To Play MaDefenders</h1>
+        <div style="margin-left: 10px;"><h1 align="center" style="-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;" onclick="text()">What is Jat?</h1>
     	<h2 id="toggleTarget" style="display:block;" align="center"> </h2>
-            <script type="text/javascript"> 
-            function display_c() {
-                var refresh=1000;
-                mytime=setTimeout('display_ct()',refresh);
-            }
-            function display_ct() {
-                var z = new Date();
-                var x1=z.toUTCString();
-                document.getElementById('ct').innerHTML = x1;
-                tt=display_c();
-            };
-            </script>
-        <div style="margin-left: 10px;"><h1 align="left" onclick="text()">Lots of Things (TESTING)</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel laoreet magna. Sed laoreet lacinia orci commodo facilisis.<br />
-        Pellentesque porta consectetur metus, posuere condimentum velit porta eget. Nulla posuere semper tortor nec accumsan.<br />
-        Vivamus sodales libero arcu. Vestibulum aliquam dolor at fermentum elementum. Vestibulum molestie ultricies semper. Nam at pulvinar sem.<br /> 
-        In commodo diam eget libero varius laoreet. Suspendisse euismod neque et lectus rhoncus, id sollicitudin nulla lobortis.<br /> 
-        Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed euismod odio orci, non pellentesque tellus molestie non. <br />
-        Donec nec lorem non diam posuere elementum in et nulla. Aliquam erat volutpat. Nunc eu est sapien.<br />
-        Donec vel laoreet dolor. Proin pellentesque dui at massa commodo pellentesque. Integer ut magna enim. <br />
-        Nam sed erat ultricies, pulvinar felis sed, bibendum justo. Fusce non felis at ligula lacinia feugiat. Nunc non aliquet est. <br />
-        In tempor tristique lacus, non luctus nunc varius eget. Pellentesque suscipit.</p></div>
+        <p align="center">What exactly is Jat, and what does it do? No-one really knows, including myself, other than it exists and it doesn't really have a purpose apart maybe from hosting MaDefenders, but that doesn't really count because that is a separate thing. So in answer to the question about the purpose of Jat, nobody knows what it does. This paragraph, however, probably took a relatively long time to read and therefore wastes your time.</p></div>
             <script>
             	$('.main-carousel').flickity({
                   arrowShape: {
@@ -411,15 +393,15 @@ window.onclick = function(event) {
         <br /><br />
         <div id="thebottom">
     	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
-        	<h2>Jat Details</h2>
-    	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
+<h2>Contact:</h2>
         	<p>Email: <!--<a href="#">#</a>--><span style="background-color:red;">Temporarily Disabled (jatError#5131912::line410)</span>
         	<br />Telephone: <span style="background-color:red;">Temporarily Disabled (jatError#205125::line411)</span>
-        	<br />Github: <span style="background-color:red;">Temporarily Disabled (jatError#79208212::line412)</span></p>
-        	<hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
-            <p>{JR-NC} Jomuneziun A Technology (Jat) 2015 - 2021
-            <br /><a href="scDataStarDataAttr.xml">View Starcode Biscuit(s)</a> (this biscuit may be subject to {JR-NC})
-            <br />Credits: <a id="toggleCredits" href="javascript:void(0);">Show/Hide</a></p>
+        	</p>
+		</p>
+         <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
+         <h2>&copy; Jomuneziun A Technology (Jat) 2015 - 2022</p>
+    	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
+        <h2>Credits: <a id="toggleCredits" href="javascript:void(0);">Show/Hide</a></h2>
     	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
     	    <script>
     	    	$("#toggleCredits").click(function(){
@@ -435,16 +417,17 @@ window.onclick = function(event) {
 JAT CREDITS:
 DESIGNER: 藤田丈
 CODER: 藤田丈
-JAT {JR-NC} FOUNDER: 藤田丈
-{JR-NC} LICENCE: 藤田丈-2019-BWID8164
-STARCODE: SCv3.0 =) [Embed] data-starData attr 藤田丈
+JAT FOUNDER: 藤田丈
+STARCODE: SCv3.0 [Embed] data-starData attr 藤田丈
 -----------------------------------------------------------------------
-I would like to thank 藤田友, E and J for MaDefenders Testing, 藤田友 
+Special thanks to 藤田友, E and J for MaDefenders Testing, 藤田友 
 for security, E for helping me develop the password and things and 
-Cow the Duck for doing nothing. 
+Cow the Duck for doing nothing whatsoever. 
 -----------------------------------------------------------------------
-{JR-NC}-藤田丈-2020 This website and its domain (jomunatech.co.uk) etc. 
-are the property of ME; the owner has a {JR} certificate (yay).
+{JR-NC}-藤田丈-2022 This website and its domain (jomunatech.co.uk) etc. 
+are the property of ME; the owner has a {JR} certificate under the BWID of 8264.
+-----------------------------------------------------------------------
+Jat and Jomuneziun A Technology names and logos &copy; Jomuneziun A Technology (Jat) 2015-2022
 	        </pre>
         </div>
     </body>
@@ -458,12 +441,11 @@ are the property of ME; the owner has a {JR} certificate (yay).
 	JAT CREDITS:
 	    DESIGNER: 藤田丈
 	    CODER: 藤田丈
-	    JAT {JR-NC} FOUNDER: 藤田丈
-	    {JR-NC} LICENCE: 藤田丈-2019-BWID8164
-	    STARCODE: SCv3.0 =) [Embed] data-starData attr 藤田丈
+	    JAT FOUNDER: 藤田丈
+	    STARCODE: SCv3.0 [Embed] data-starData attr 藤田丈
 	    SPECIAL THANKS TO: E and 藤田友
 	    -----------------------------------------------------------------------
-	    {JR-NC}-藤田丈-2020 This website and its domain (jomunatech.co.uk) etc. 
-	    are the property of ME; the owner has a {JR} certificate (yay).
+	    {JR-NC}-藤田丈-2022 This website and its domain (jomunatech.com) etc. 
+	    are the property of ME; the owner has a {JR} certificate under the BWID of 8264.
 -->
 	 
