--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -394,8 +394,7 @@ window.onclick = function(event) {
         <div id="thebottom">
     	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
 <h2>Contact:</h2>
-        	<p>Email: <!--<a href="#">#</a>--><span style="background-color:red;">Temporarily Disabled (jatError#5131912::line410)</span>
-        	<br />Telephone: <span style="background-color:red;">Temporarily Disabled (jatError#205125::line411)</span>
+        	<p>Email: <a href="mailto:contact.jomunatech@gmail.com">contact.jomunatech@gmail.com</a>
         	</p>
 		</p>
          <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
