163 minor update involving name change etc

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@ document.onkeydown = function(e) {
 		<br /><h3 align="center">Don't have a JatAccount? You must pass The Test Of Doom to get one. <a id="a5">
 			 	<sup style="font-size:8px;cursor:pointer;" class="tooltip">[?]<span class="tooltip-text" id="tooltip1">The test may be confusing to you if you don't know what a J&ocirc;let is.
 			 		Just to warn you. If you can't take the test, see below for Logged Out Mode.</span></sup></a></h3></h3>
-		<h3 align="center">Take The Test Of Doom at <a href="thetest.html" id="a2">jomunatech.co.uk/thetest</a>.
+		<h3 align="center">Take The Test Of Doom at <a href="thetest.html" id="a2">jomunatech.com/thetest</a>.
 			 Or you can <a id="a3" href="u0/home.html">Use Jat Logged Out</a><a id="a4">
 			 	<sup style="font-size:8px;cursor:pointer;" class="tooltip">[?]<span class="tooltip-text">You can use Jat logged out (or incognito), but you can't use settings
-			 		and you cannot change your nickname or use JatPro, etc.</span></sup></a></h3>
+			 		and you cannot change your nickname or use JatPro, etc. Also its wildly out of date. Baisically don't use Jat logged out.</span></sup></a></h3>
 		<h3 align="center">Note: MaDefenders can be played logged out from the menu or you can find it <a href="madefenders.html" id="a6">here</a>.</h3>
 		<p style="color: #0000b3;font-size:8px;text-align:center;">Logo and all names Copyright &copy; Jomuneziun A Technology 2015 - 2021</p>
 	</body>
