i changed some colours

--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -23,7 +23,7 @@
         <title>Jat | Jomunatech.com</title>
         <!-- data-starData="/head" -->
     </head>
-    <body data-starData="body-" id="body" onload="keepColour(); display_ct(); opn(); ifload();" vlink="#0000b3" link="#0000b3">
+    <body data-starData="body-" id="body" onload="keepColour(); display_ct(); opn(); ifload();" vlink="#4f7d5c" link="#4f7d5c">
         <script>
             window.onscroll = function() {scrollFunction()};
             function scrollFunction() {
@@ -94,42 +94,34 @@
     	<div id="toolbar">
 
     		<div class="dropdown">
-                <button class="dropbtn" style="font-size:30px;padding-right:8px;">&#8801;</button>
+                <a class="dropbtn" >&#8801;</a>&nbsp;&nbsp;&nbsp;
                 <div class="dropdown-content">
-                    <a href="Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html">Jat Home&nbsp;<i class="fa fa-home" > </i></a>
-                    <a href="homepageQueryJatPlusIndexFileThingy.html">JatPro&nbsp;<i class="fa fa-smile-o" > </i><svg viewBox="0 0 24 20" width="24" fill="black" stroke="black">
-                        <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"> </path>
-                    </svg></a>
-                    <a href="#">JatCloud&nbsp;<i id="div1" class="fa"> </i></a>
-                    <a href="shop/products.html">JatStore&nbsp;<i class="fa fa-shopping-bag" > </i></a>
-                    <a href="madefenders.html">MaDefenders (YAY)</a>
+                    <a href="Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html">Jat Home&nbsp;</a>
+                    <a href="shop/products.html">JatStore&nbsp; BETA</a>
+                    <a href="madefenders.html">MaDefenders</a>
                </div>
             </div>
     		<div class="dropdown">
-                <button class="dropbtn" style="font-size:30px;"><i class="fa fa-user"> </i></button>
-                <div class="dropdown-content">
-                    <a style="cursor:pointer;" onclick="openNav()">Settings&nbsp;<i class="fa fa-cog fa-spin"> </i></a>
-                    <a>Notifications <i class="fa fa-comments-o"> </i></a>
-               </div>
-           </div>
-    	    <a class="a" href="index.html">Log Out</a>
+                <a class="dropbtn" onclick="openNav()" style="background-color:#4f7d5c;"><i class="fa fa-cog fa-spin#"> </i></a>
+           </div>&nbsp;&nbsp;&nbsp;
+    	    <a class="a" href="index.html" style="background-color:#4f7d5c;">Log Out</a>
     	    <div id="myNav" class="overlay">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">Close Settings&nbsp;<i class="fa fa-cog fa-spin"> </i></a>
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">Close Settings</a>
   <div class="overlay-content">
   	<br/>
       <p>Themes:</p>
-      <a title="Emibug Blue"><canvas class="canvas canvasmargin" onclick="blueChange()" height="50px" width="75px" style="background-color:#0000b3;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="EBreakfast C4"><canvas class="canvas" onclick="redChange()" height="50px" width="75px" style="background-color:#ff0040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Millie Yellow"><canvas class="canvas" onclick="yellowChange()" height="50px" width="75px" style="background-color:#ffbf00;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Johbug Green"><canvas class="canvas" onclick="greenChange()" height="50px" width="75px" style="background-color:#080;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Tomobug Blue"><canvas class="canvas canvasmargin" onclick="tBlueChange()" height="50px" width="75px" style="float:left;background-color:#24bdff;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Japanese Grape"><canvas class="canvas" onclick="purpleChange()" height="50px" width="75px" style="background-color:purple;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Snuggle Grey"><canvas class="canvas" onclick="greyChange()" height="50px" width="75px" style="background-color:#666;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Mummy Maroon"><canvas class="canvas" onclick="maroonChange()" height="50px" width="75px" style="background-color:#800040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Daddy Uniform"><canvas class="canvas canvasmargin" onclick="dBlueChange()" height="50px" width="75px" style="float:left;background-color:#002050;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Fuji Wisteria"><canvas class="canvas" onclick="fujiChange()" height="50px" width="75px" style="background-color:#c9a0dc;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Grandad Evening"><canvas class="canvas" onclick="orangeChange()" height="50px" width="75px" style="background-color:#ff6500;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Green-fingered Green"><canvas class="canvas" onclick="dGreenChange()" height="50px" width="75px" style="background-color:#040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Blue"><canvas class="canvas canvasmargin" onclick="blueChange()" height="50px" width="75px" style="background-color:#0000b3;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Red"><canvas class="canvas" onclick="redChange()" height="50px" width="75px" style="background-color:#ff0040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Yellow"><canvas class="canvas" onclick="yellowChange()" height="50px" width="75px" style="background-color:#ffbf00;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Green"><canvas class="canvas" onclick="greenChange()" height="50px" width="75px" style="background-color:#080;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Blue"><canvas class="canvas canvasmargin" onclick="tBlueChange()" height="50px" width="75px" style="float:left;background-color:#24bdff;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Grape"><canvas class="canvas" onclick="purpleChange()" height="50px" width="75px" style="background-color:purple;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Grey"><canvas class="canvas" onclick="greyChange()" height="50px" width="75px" style="background-color:#666;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Maroon"><canvas class="canvas" onclick="maroonChange()" height="50px" width="75px" style="background-color:#800040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Dark Blue"><canvas class="canvas canvasmargin" onclick="dBlueChange()" height="50px" width="75px" style="float:left;background-color:#002050;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Wisteria"><canvas class="canvas" onclick="fujiChange()" height="50px" width="75px" style="background-color:#c9a0dc;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Orange"><canvas class="canvas" onclick="orangeChange()" height="50px" width="75px" style="background-color:#ff6500;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Dark Green"><canvas class="canvas" onclick="dGreenChange()" height="50px" width="75px" style="background-color:#040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
       <p>&nbsp;</p><p>&nbsp;</p>
       <!--<button id="btn3">Deny Cookies</button>-->
       <!--<input type="text" placeholder="Change Nickname" id="changeNicknameBoxOfDoom" /><input type="submit" id="submitButtonOfDoom" onclick="changeNick()" />-->
@@ -147,7 +139,7 @@
       var theBody = document.getElementById("body");
         function resetColour() {
             bar.style.backgroundImage = "none";
-            bar.style.backgroundColor = "#ddd";
+            bar.style.backgroundColor = "#4f7d5c";
             document.getElementById("header").style.border = "5px solid black";
             theBody.style.fontFamily = "'Share'";
             var backgroundColour = "#ccc";
@@ -321,13 +313,18 @@
                 <div class="carousel-cell" id="carousel-cell-1">...</div>
                 <div class="carousel-cell" id="carousel-cell-2">...</div>
                 <div class="carousel-cell" id="carousel-cell-3">...</div>
-           </div>
-           <h1 class="thingymabob" style="color: #0000b3;">Not Sure What It Does</h1>
-           <h1 class="thingymabob" style="color: red;">Used by about 35 People</h1>
-           <h1 class="thingymabob" style="color: #53b85c;">To Play MaDefenders</h1>
+                <div class="carousel-cell" id="carousel-cell-4">...</div>
+           </div><br/>
+           <h1 class="thingymabob" style="color: #4f7d5c;">Not Sure What It Does</h1>
+           <h1 class="thingymabob" style="color: #000;">Used by like 2 People</h1>
+           <h1 class="thingymabob" style="color: #4f7d5c;">To Play MaDefenders</h1>
+           <h1 class="thingymabob" style="color: #000;">Still Not Sure What It Does</h1>
         <div style="margin-left: 10px;"><h1 align="center" style="-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;" onclick="text()">What is Jat?</h1>
     	<h2 id="toggleTarget" style="display:block;" align="center"> </h2>
         <p align="center">What exactly is Jat, and what does it do? No-one really knows, including myself, other than it exists and it doesn't really have a purpose apart maybe from hosting MaDefenders, but that doesn't really count because that is a separate thing. So in answer to the question about the purpose of Jat, nobody knows what it does. This paragraph, however, probably took a relatively long time to read and therefore wastes your time.</p></div>
+        <div style="margin-left: 10px;"><h1 align="center" style="-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;" onclick="text()">Why does it exist?</h1>
+        <p align="center">Why does Jat exist? This is a good question. The answer is that I was bored and so decided to make a website. Interestingly enough, this website is probably also making you bored, but that is not the direct purpose of the website. It has none.</p></div>
+
             <script>
             	$('.main-carousel').flickity({
                   arrowShape: {
@@ -336,13 +333,13 @@
                      x2: 65, y2: 15,
                      x3: 65
                   },
-                  cellAlign: 'left',
-                  contain: true,
+                  cellAlign: 'center',
+                  contain: false,
                   wrapAround: true,
-                  freeScroll: true,
+                  freeScroll: false,
                   initialIndex: 0,
-                  pageDots: false,
-                  autoPlay: 2000,
+                  pageDots: true,
+                  autoPlay: 1000,
                   pauseAutoPlayOnHover: false,
                });
             </script>
@@ -387,10 +384,6 @@ window.onclick = function(event) {
   };
 };
 </script>
-        <p align="center">
-        	<!--<ruby>&#x85e4;<rt>ふじ</rt>&#x7530;<rt>た</rt>&#x4e08;<rt>じょう</rt></ruby>-->
-        </p>
-        <br /><br />
         <div id="thebottom">
     	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
 <h2>Contact:</h2>
@@ -401,6 +394,10 @@ window.onclick = function(event) {
          <h2>&copy; Jomuneziun A Technology (Jat) 2015 - 2022</p>
     	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
         <h2>Credits: <a id="toggleCredits" href="javascript:void(0);">Show/Hide</a></h2>
+    	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
+        <h2 align="center" style="color:#000;">
+        	<ruby>&#x85e4;<rt>ふじ</rt>&#x7530;<rt>た</rt>&#x4e08;<rt>じょう</rt></ruby>
+        </h2>
     	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
     	    <script>
     	    	$("#toggleCredits").click(function(){
